--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: event_bloc_tester
 description: A test package used in event_bloc
-version: 0.1.2
+version: 0.1.2+1
 homepage: https://github.com/VHCBlade/event_bloc_tester
 
 environment:
