--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: event_bloc_tester
 description: A test package used in event_bloc
-version: 0.1.3
+version: 0.1.4
 homepage: https://github.com/VHCBlade/event_bloc_tester
 
 environment:
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_test:
     sdk: flutter
+  test: ^1.21.0
   tuple: ^2.0.0
 
 dev_dependencies:
