--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: event_bloc_tester
 description: A test package used in event_bloc
-version: 0.1.5
+version: 0.1.6
 homepage: https://github.com/VHCBlade/event_bloc_tester
 
 environment:
@@ -17,5 +17,6 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  very_good_analysis: ^5.0.0
 
 flutter:
